--- a/vignettes/CaseStudies/MOMENTUM2/Figures.Rmd
+++ b/vignettes/CaseStudies/MOMENTUM2/Figures.Rmd
@@ -23,215 +23,12 @@ Load and prepare SimpleBox outcome data
 
 ```{R load SimpleBox data}
 ## Define paths 
-data_path <- "/rivm/r/E121554 LEON-T/03 - uitvoering WP3/Deliverable 3.5/" # Define path to plot data
+data_path <- "/rivm/r/E121554 LEON-T/03 - uitvoering WP3/MOMENTUM2/PlotData/" # Define path to plot data
 figurefolder <- "/rivm/r/E121554 LEON-T/03 - uitvoering WP3/MOMENTUM2/Figures/" # Define figure folder path
 abs_path_Measurements <- "/rivm/r/E121554 LEON-T/03 - uitvoering WP3/Deliverable 3.5/LEONT_TNO_measurements_clean.xlsx" # Define path to LEON-T measurement data
 
-## Load functions
-source("vignettes/CaseStudies/LEON-T/f_plot_functions.R")
-
-## Load data
-load(paste0(data_path, "SB_Masses.RData"))
-load(paste0(data_path, "SB_Tyre_wear_data.RData"))
-load(paste0(data_path, "SB_Material_parameters.RData"))
-load(paste0("/rivm/r/E121554 LEON-T/03 - uitvoering WP3/Deliverable 3.5/DPMFAoutput_LEON-T_D3.5_TWP_20241126.RData"))
-
-##### 
-##Calculate number of complete runs
-yearcount <- continental_polymer_data |>
-  group_by(Source, RUN, Polymer) |>
-  summarise(Year_count = n_distinct(Year), .groups = "drop") |>
-  group_by(Source, RUN) |>
-  summarise(Year_count = sum(Year_count)) |>
-  mutate(npol = case_when(Source == "Tyre wear" ~ 2,
-                          Source == "Other sources" ~ 15)) |>
-  mutate(nyear = as.integer(Year_count/npol)) |>
-  filter(nyear == 101) |>
-  select(Source, RUN, nyear)
-
-## Number of complete runs per Source
-nruns <- yearcount |>
-  group_by(Source) |>
-  count()
-
-## Number of complete runs for Tyre wear
-TWruns <- nruns |>
-  filter(Source == "Tyre wear") 
-TWruns <- TWruns$n
-
-## Number of complete runs for Other sources
-Otherruns <- nruns |>
-  filter(Source == "Other sources") 
-Otherruns <- Otherruns$n
-
-##### 
-## Calculate concentrations from masses
-source("baseScripts/initWorld_onlyPlastics.R")
-Matrix <- World$fetchData("Matrix")
-
-# # Calculate concentrations for masses summed over polymers
-# mass_conc_summed_over_pol <- 
-#   Solution_long_summed_over_pol |>
-#   left_join(World$fetchData("Volume"), 
-#             by=c("Scale", "SubCompart")) |>
-#   # Change 'cloudwater' to 'air', and then sum the masses and volumes of these compartments together
-#   mutate(SubCompart = ifelse(SubCompart == "cloudwater", "air", SubCompart)) |>
-#   ungroup() |> 
-#   group_by(RUN, Source, Year, Scale, SubCompart) |>
-#   summarise(Mass = sum(Mass),
-#             Volume = sum(Volume)) |>
-#   ungroup() |>
-#   # Calculate the concentrations
-#   mutate(conc_kg_m3 = Mass/Volume) |> 
-#   left_join(World$fetchData("FRACw"),
-#             by=c("Scale", "SubCompart")) |> 
-#   left_join(World$fetchData("FRACa"),
-#             by=c("Scale", "SubCompart")) |> 
-#   left_join(World$fetchData("rhoMatrix"),
-#             by=c("SubCompart")) |> 
-#   left_join(World$fetchData("Matrix"),
-#             by=c("SubCompart"))|> 
-#   mutate(Unit = "kg/m3") |> 
-#   mutate(Concentration =
-#            case_match(Matrix,
-#                       "air" ~ conc_kg_m3*1000000,
-#                       "water" ~ conc_kg_m3*1000,
-#                       "soil" ~ conc_kg_m3  / ((1 - FRACw - FRACa) * rhoMatrix)*1000, # RhoWater needed (we need to define subcompartment variables for rhoWater, rhoSolid and rhoAir)
-#                       "sediment" ~ conc_kg_m3  / ((1 - FRACw - FRACa) * rhoMatrix)*1000,
-#                       .default = conc_kg_m3),
-#          Unit =
-#            case_match(Matrix,
-#                       "air" ~ "mg/m3",
-#                       "water" ~ "mg/L",
-#                       "soil" ~ "g/kg dw",
-#                       "sediment" ~ "g/kg dw",
-#                       .default = Unit)) |>
-#   mutate(SubCompartName = paste0(SubCompart, " (", Unit, ")")) |>
-#   select(-c(conc_kg_m3, FRACw, FRACa, rhoMatrix, Matrix, Volume))
-
-# # Calculate concentrations for NR SBR dataframe
-# mass_conc_NR_SBR <- NR_SBR_data |>
-#   mutate(Source = "Tyre wear") |>
-#   mutate(SubCompart = ifelse(SubCompart == "cloudwater", "air", SubCompart)) |>
-#   ungroup() |> 
-#   group_by(RUN, Source, Year, Scale, SubCompart, Polymer) |>
-#   summarise(Mass = sum(Mass)) |>
-#   ungroup() |>
-#   left_join(World$fetchData("Volume"), 
-#             by=c("Scale", "SubCompart")) |>
-#   mutate(conc_kg_m3 = Mass/Volume) |> 
-#   left_join(World$fetchData("FRACw"),
-#             by=c("Scale", "SubCompart")) |> 
-#   left_join(World$fetchData("FRACa"),
-#             by=c("Scale", "SubCompart")) |> 
-#   left_join(World$fetchData("rhoMatrix"),
-#             by=c("SubCompart")) |> 
-#   left_join(World$fetchData("Matrix"),
-#             by=c("SubCompart"))|> 
-#   mutate(Unit = "kg/m3") |> 
-#   mutate(Concentration =
-#            case_match(Matrix,
-#                       "air" ~ conc_kg_m3*1000000,
-#                       "water" ~ conc_kg_m3*1000,
-#                       "soil" ~ conc_kg_m3  / ((1 - FRACw - FRACa) * rhoMatrix)*1000, # RhoWater needed (we need to define subcompartment variables for rhoWater, rhoSolid and rhoAir)
-#                       "sediment" ~ conc_kg_m3  / ((1 - FRACw - FRACa) * rhoMatrix)*1000,
-#                       .default = conc_kg_m3),
-#          Unit =
-#            case_match(Matrix,
-#                       "air" ~ "mg/m3",
-#                       "water" ~ "mg/L",
-#                       "soil" ~ "g/kg dw",
-#                       "sediment" ~ "g/kg dw",
-#                       .default = Unit))  |>
-#   mutate(SubCompartName = paste0(SubCompart, " (", Unit, ")")) |>
-#   select(-c(conc_kg_m3, FRACw, FRACa, rhoMatrix, Matrix, Volume))
-
-# Calculate concentrations for continental polymer data
-mass_conc_continental_polymer <- continental_polymer_data |>
-  mutate(SubCompart = ifelse(SubCompart == "cloudwater", "air", SubCompart)) |>
-  ungroup() |>
-  group_by(RUN, Source, Year, Scale, SubCompart, Polymer) |>
-  summarise(Mass = sum(Mass)) |>
-  ungroup() |>
-  left_join(World$fetchData("Volume"),
-            by=c("Scale", "SubCompart")) |>
-  mutate(conc_kg_m3 = Mass/Volume) |>
-  left_join(World$fetchData("FRACw"),
-            by=c("Scale", "SubCompart")) |>
-  left_join(World$fetchData("FRACa"),
-            by=c("Scale", "SubCompart")) |>
-  left_join(World$fetchData("rhoMatrix"),
-            by=c("SubCompart")) |>
-  left_join(World$fetchData("Matrix"),
-            by=c("SubCompart"))|>
-  mutate(Unit = "kg/m3") |>
-  mutate(Concentration = conc_kg_m3) |>
-  mutate(Concentration =
-           case_match(Matrix,
-  #                     "air" ~ conc_kg_m3*1000000,
-  #                     "water" ~ conc_kg_m3*1000,
-                      "soil" ~ conc_kg_m3  / ((1 - FRACw - FRACa) * rhoMatrix), # RhoWater needed (we need to define subcompartment variables for rhoWater, rhoSolid and rhoAir)
-                       "sediment" ~ conc_kg_m3  / ((1 - FRACw - FRACa) * rhoMatrix),
-                      .default = conc_kg_m3),
-          Unit =
-            case_match(Matrix,
-  #                     "air" ~ "mg/m3",
-  #                     "water" ~ "mg/L",
-                       "soil" ~ "kg/kg dw",
-                       "sediment" ~ "kg/kg dw",
-                       .default = Unit))  |>
-  mutate(SubCompartName = paste0(SubCompart, " (", Unit, ")")) |>
-  select(-c(conc_kg_m3, FRACw, FRACa, rhoMatrix, Matrix, Volume))
-
-# Calculate concentrations for SB_data_TW
-mass_conc_SB_data_TW <- SB_data_TW |>
-  mutate(SubCompart = ifelse(SubCompart == "cloudwater", "air", SubCompart)) |>
-  ungroup() |>
-  group_by(RUN, Source, Year, Scale, SubCompart) |>
-  summarise(Mass = sum(Mass)) |>
-  ungroup() |>
-  left_join(World$fetchData("Volume"),
-            by=c("Scale", "SubCompart")) |>
-  mutate(conc_kg_m3 = Mass/Volume) |>
-  left_join(World$fetchData("FRACw"),
-            by=c("Scale", "SubCompart")) |>
-  left_join(World$fetchData("FRACa"),
-            by=c("Scale", "SubCompart")) |>
-  left_join(World$fetchData("rhoMatrix"),
-            by=c("SubCompart")) |>
-  left_join(World$fetchData("Matrix"),
-            by=c("SubCompart"))|>
-  mutate(Unit = "kg/m3") |>
-  mutate(Concentration =
-           case_match(Matrix,
-                      "air" ~ conc_kg_m3*1000000,
-                      "water" ~ conc_kg_m3*1000,
-                      "soil" ~ conc_kg_m3  / ((1 - FRACw - FRACa) * rhoMatrix)*1000, # RhoWater needed (we need to define subcompartment variables for rhoWater, rhoSolid and rhoAir)
-                      "sediment" ~ conc_kg_m3  / ((1 - FRACw - FRACa) * rhoMatrix)*1000,
-                      .default = conc_kg_m3),
-         Unit =
-           case_match(Matrix,
-                      "air" ~ "mg/m3",
-                      "water" ~ "mg/L",
-                      "soil" ~ "g/kg dw",
-                      "sediment" ~ "g/kg dw",
-                      .default = Unit))  |>
-  mutate(SubCompartName = paste0(SubCompart, " (", Unit, ")")) |>
-  select(-c(conc_kg_m3, FRACw, FRACa, rhoMatrix, Matrix, Volume))
-
-# ##### 
-# ## Select only the complete runs for all concentration dataframes 
-# mass_conc_summed_over_pol <- mass_conc_summed_over_pol |>
-#   inner_join(yearcount, by = c("RUN", "Source"))
-# 
-# mass_conc_NR_SBR <- mass_conc_NR_SBR |>
-#   inner_join(yearcount, by = c("RUN", "Source"))
-
-mass_conc_continental_polymer <- mass_conc_continental_polymer |>
-  inner_join(yearcount, by = c("RUN", "Source"))
-
-mass_conc_SB_data_TW <- mass_conc_SB_data_TW |>
-  inner_join(yearcount, by = c("RUN", "Source"))
+load(paste0(data_path, "LEON-T_concentrations.RData"))
+load(paste0(data_path, "LEON-T_SB_Material_parameters.RData"))
 ```
 
 ```{R set plot parameters}
@@ -248,24 +45,29 @@ plot_theme <-  theme(
   panel.grid.minor = element_line(color = "lightgrey", size = 1)
 )
 
-Source_colors <- c("Tyre wear" = "#2D708EFF",
-                   "Other sources" = "#440154FF")
+Source_type_colors = c("SimpleBox" = "#00c0AF", 
+                            "Measurement_NL" = "#481567FF", 
+                            "Measurement_Europe" = "#F8766D")
 
-NR_SBR_colors <- c("NR" = "#20A387FF",
-                   "SBR" = "#481567FF")
+Measurement_type_colors = c("Measurement_NL" = "#481567FF", 
+                            "Measurement_Europe" = "#F8766D")
 
 year <- 2019
 ```
+
+# Continental scale comparisons
 
 Convert mass to particles for comparison to measurements. 
 
 Also filter out any RUN/Polymer combinations that have a RadS outside the detection limits of the measurements.
 
 ```{R convert mass to particles concentration}
-measurements <- read.xlsx("/rivm/r/E121554 LEON-T/03 - uitvoering WP3/MOMENTUM2/MOMENTUM2_measurements.xlsx", sheet = "Particle Data")
+measurements_particles <- read.xlsx("/rivm/r/E121554 LEON-T/03 - uitvoering WP3/MOMENTUM2/MOMENTUM2_measurements.xlsx", sheet = "Particle Data") |>
+  mutate(Scale = str_replace(Scale, "Regional", "NL"),
+         Scale = str_replace(Scale, "Continental", "Europe"))
 
-lower_limit <- min(na.omit(measurements$lower_detection_limit_um)) * 1000
-upper_limit <- max(measurements$upper_detection_limit_um) * 1000
+lower_limit <- min(na.omit(measurements_particles$lower_detection_limit_um)) * 1000
+upper_limit <- max(measurements_particles$upper_detection_limit_um) * 1000
 
 # Get run numbers between the lower and upper limit
 limit_runs <- Material_Parameters_long |>
@@ -275,16 +77,16 @@ limit_runs <- Material_Parameters_long |>
   filter(RadS >= lower_limit) |>
   filter(RadS <= upper_limit) 
 
-rad_rho <- limit_runs |>
+rad_rho_filtered <- limit_runs |>
   rename(rad_nm = RadS) |>
   rename(rho_kg_m3 = RhoS) |>
   mutate(rad_m = rad_nm*10^-9) |>
   mutate(volume_m3 = (4/3)*pi*rad_m^3) |>
   mutate(mass_per_particle_kg = volume_m3*rho_kg_m3)
 
-particles_conc_continental_polymer <- mass_conc_continental_polymer |>
+particles_conc_continental_polymer_size_filtered <- mass_conc_continental_polymer |>
   filter(Year == year) |>
-  left_join(rad_rho, by = c("RUN", "Polymer")) |>
+  left_join(rad_rho_filtered, by = c("RUN", "Polymer")) |>
   filter(!is.na(rad_nm)) |>
   mutate(Concentration = Concentration/mass_per_particle_kg) |>
   mutate(Unit = case_when(
@@ -296,27 +98,26 @@ particles_conc_continental_polymer <- mass_conc_continental_polymer |>
   group_by(RUN, SubCompart, SubCompartName, source, Year, Unit, Scale) |>
   summarise(Concentration = sum(Concentration)) |>
   ungroup()
-
 ```
 
-```{R Make figure comparing SB outcomes to measurements for all polymers}
+```{R Make figure comparing SB outcomes to particle measurements for all polymers}
 # Get measured concentrations
-measurements_formatted <- measurements |> 
-  mutate(source = "Measurement") |>
+measurements_formatted <- measurements_particles |> 
+  mutate(source = paste0("Measurement_", Scale)) |>
   rename(Concentration = concentration,
          Unit = concentration_unit) |>
   mutate(SubCompartName = paste0(SubCompart, " (", Unit, ")")) |>
   select(Concentration, SubCompartName, source) 
 
-particle_plot_data <- bind_rows(particles_conc_continental_polymer, measurements_formatted)
+particle_plot_data <- bind_rows(particles_conc_continental_polymer_size_filtered, measurements_formatted)
 Figure <- ggplot(particle_plot_data, aes(x = SubCompartName, y = Concentration, col=source)) +  
   geom_violin(data = particle_plot_data %>% filter(source == "SimpleBox"), 
               aes(fill = source), alpha = 0.5) + 
-  geom_jitter(data = particle_plot_data %>% filter(source == "Measurement"), 
+  geom_jitter(data = particle_plot_data |> filter(source %in% c("Measurement_NL", "Measurement_Europe")), 
               aes(col = source), 
               position = position_jitter(width = 0.2), alpha = 1, size = 3) +
-  scale_fill_manual(values = c("SimpleBox" = "#00c0AF", "Measurement" = "#F8766D")) +
-  scale_color_manual(values = c("Measurement" = "#F8766D")) +
+  scale_fill_manual(values = Source_type_colors) +
+  scale_color_manual(values = Measurement_type_colors) +
   labs(
     title = paste0("Microplastic concentrations at continental scale, ", as.character(year)),
     subtitle = paste0("Modeled concentrations filtered for detection limit of measurements"),
@@ -338,20 +139,275 @@ Figure <- ggplot(particle_plot_data, aes(x = SubCompartName, y = Concentration, 
 
 Figure
 
-ggsave(paste0(figurefolder, "All_polymers.png"), plot = Figure, width = 20, height = 23, dpi = 1000)
+ggsave(paste0(figurefolder, "All_polymers_continental_particle_size_filtered.png"), plot = Figure, width = 20, height = 23, dpi = 1000)
 ```
 
-```{R}
+Particle figure with all polymers but not filtered for size
 
+```{R The same figure but not filtered for size}
 
+# Get run numbers between the lower and upper limit
+rad_rho_unfiltered <- Material_Parameters_long |>
+  filter(VarName == "RadS" | VarName == "RhoS") |>
+  select(VarName, Polymer, RUN, value) |>
+  pivot_wider(names_from = "VarName", values_from = "value") |>
+  rename(rad_nm = RadS) |>
+  rename(rho_kg_m3 = RhoS) |>
+  mutate(rad_m = rad_nm*10^-9) |>
+  mutate(volume_m3 = (4/3)*pi*rad_m^3) |>
+  mutate(mass_per_particle_kg = volume_m3*rho_kg_m3)
 
+particles_conc_continental_polymer_unfiltered <- mass_conc_continental_polymer |>
+  filter(Year == year) |>
+  left_join(rad_rho_unfiltered, by = c("RUN", "Polymer")) |>
+  filter(!is.na(rad_nm)) |>
+  mutate(Concentration = Concentration/mass_per_particle_kg) |>
+  mutate(Unit = case_when(
+    Unit == "kg/kg dw" ~ "#/kg dw",
+    Unit == "kg/m3" ~ "#/m3")) |>
+  mutate(SubCompartName = paste0(SubCompart, " (", Unit, ")")) |>
+  select(RUN, Source, Year, Scale, SubCompart, Polymer, Concentration, Unit, SubCompartName) |>
+  mutate(source = "SimpleBox") |>
+  group_by(RUN, SubCompart, SubCompartName, source, Year, Unit, Scale) |>
+  summarise(Concentration = sum(Concentration)) |>
+  ungroup()
 
+# Get measured concentrations
+measurements_formatted <- measurements_particles |> 
+  mutate(source = paste0("Measurement_", Scale)) |>
+  rename(Concentration = concentration,
+         Unit = concentration_unit) |>
+  mutate(SubCompartName = paste0(SubCompart, " (", Unit, ")")) |>
+  select(Concentration, SubCompartName, source) 
+
+particle_plot_data <- bind_rows(particles_conc_continental_polymer_unfiltered, measurements_formatted)
+Figure <- ggplot(particle_plot_data, aes(x = SubCompartName, y = Concentration, col=source)) +  
+  geom_violin(data = particle_plot_data %>% filter(source == "SimpleBox"), 
+              aes(fill = source), alpha = 0.5) + 
+  geom_jitter(data = particle_plot_data %>% filter(source %in% c("Measurement_NL", "Measurement_Europe")), 
+              aes(col = source), 
+              position = position_jitter(width = 0.2), alpha = 1, size = 3) +
+  scale_fill_manual(values = Source_type_colors) +
+  scale_color_manual(values = Measurement_type_colors) +
+  labs(
+    title = paste0("Microplastic concentrations at continental scale, ", as.character(year)),
+    subtitle = paste0("Modeled concentrations not filtered for detection limit of measurements"),
+    x = "",
+    y = "Concentration"
+  ) +
+  plot_theme +  
+  scale_y_log10(
+    breaks = scales::trans_breaks("log10", function(x) 10^x, n = 10),
+    labels = scales::trans_format("log10", scales::math_format(10^.x))) +
+  annotation_logticks(
+    sides = "l",  
+    short = unit(0.07, "cm"),
+    mid = unit(0.07, "cm"),
+    long = unit(0.1, "cm"),
+    size = 0.25) +
+  theme(legend.position = "bottom") +
+  guides(fill = guide_legend(title = NULL), color = guide_legend(title = NULL))  # Remove legend titles
+
+Figure
+
+ggsave(paste0(figurefolder, "All_polymers_continental_particle_unfiltered.png"), plot = Figure, width = 20, height = 23, dpi = 1000)
+```
+
+# Regional scale comparisons
+
+Convert mass to particles for comparison to measurements. 
+
+Also filter out any RUN/Polymer combinations that have a RadS outside the detection limits of the measurements.
+
+```{R convert mass to particles concentration}
+particles_conc_regional_polymer_size_filtered <- mass_conc_regional_polymer |>
+  filter(Year == year) |>
+  left_join(rad_rho_filtered, by = c("RUN", "Polymer")) |>
+  filter(!is.na(rad_nm)) |>
+  mutate(Concentration = Concentration/mass_per_particle_kg) |>
+  mutate(Unit = case_when(
+    Unit == "kg/kg dw" ~ "#/kg dw",
+    Unit == "kg/m3" ~ "#/m3")) |>
+  mutate(SubCompartName = paste0(SubCompart, " (", Unit, ")")) |>
+  select(RUN, Source, Year, Scale, SubCompart, Polymer, Concentration, Unit, SubCompartName) |>
+  mutate(source = "SimpleBox") |>
+  group_by(RUN, SubCompart, SubCompartName, source, Year, Unit, Scale) |>
+  summarise(Concentration = sum(Concentration)) |>
+  ungroup()
+```
+
+```{R Make figure comparing SB outcomes to particle measurements for all polymers}
+# Get measured concentrations
+measurements_formatted <- measurements_particles |> 
+  mutate(source = paste0("Measurement_", Scale)) |>
+  rename(Concentration = concentration,
+         Unit = concentration_unit) |>
+  mutate(SubCompartName = paste0(SubCompart, " (", Unit, ")")) |>
+  select(Concentration, SubCompartName, source) 
+
+particle_plot_data <- bind_rows(particles_conc_regional_polymer_size_filtered, measurements_formatted)
+
+Figure <- ggplot(particle_plot_data, aes(x = SubCompartName, y = Concentration, col=source)) +  
+  geom_violin(data = particle_plot_data %>% filter(source == "SimpleBox"), 
+              aes(fill = source), alpha = 0.5) + 
+  geom_jitter(data = particle_plot_data |> filter(source %in% c("Measurement_NL", "Measurement_Europe")), 
+              aes(col = source), 
+              position = position_jitter(width = 0.2), alpha = 1, size = 3) +
+  scale_fill_manual(values = Source_type_colors) +
+  scale_color_manual(values = Measurement_type_colors) +
+  labs(
+    title = paste0("Microplastic concentrations at regional scale, ", as.character(year)),
+    subtitle = paste0("Modeled concentrations filtered for detection limit of measurements"),
+    x = "",
+    y = "Concentration"
+  ) +
+  plot_theme +  
+  scale_y_log10(
+    breaks = scales::trans_breaks("log10", function(x) 10^x, n = 10),
+    labels = scales::trans_format("log10", scales::math_format(10^.x))) +
+  annotation_logticks(
+    sides = "l",  
+    short = unit(0.07, "cm"),
+    mid = unit(0.07, "cm"),
+    long = unit(0.1, "cm"),
+    size = 0.25) +
+  theme(legend.position = "bottom") +
+  guides(fill = guide_legend(title = NULL), color = guide_legend(title = NULL))  # Remove legend titles
+
+Figure
+
+ggsave(paste0(figurefolder, "All_polymers_regional_particle_size_filtered.png"), plot = Figure, width = 20, height = 23, dpi = 1000)
+```
+
+Particle figure with all polymers but not filtered for size
+
+```{R The same figure but not filtered for size}
+particles_conc_regional_polymer_unfiltered <- mass_conc_regional_polymer |>
+  filter(Year == year) |>
+  left_join(rad_rho_unfiltered, by = c("RUN", "Polymer")) |>
+  filter(!is.na(rad_nm)) |>
+  mutate(Concentration = Concentration/mass_per_particle_kg) |>
+  mutate(Unit = case_when(
+    Unit == "kg/kg dw" ~ "#/kg dw",
+    Unit == "kg/m3" ~ "#/m3")) |>
+  mutate(SubCompartName = paste0(SubCompart, " (", Unit, ")")) |>
+  select(RUN, Source, Year, Scale, SubCompart, Polymer, Concentration, Unit, SubCompartName) |>
+  mutate(source = "SimpleBox") |>
+  group_by(RUN, SubCompart, SubCompartName, source, Year, Unit, Scale) |>
+  summarise(Concentration = sum(Concentration)) |>
+  ungroup()
+
+# Get measured concentrations
+measurements_formatted <- measurements_particles |> 
+  mutate(source = paste0("Measurement_", Scale)) |>
+  rename(Concentration = concentration,
+         Unit = concentration_unit) |>
+  mutate(SubCompartName = paste0(SubCompart, " (", Unit, ")")) |>
+  select(Concentration, SubCompartName, source) 
+
+particle_plot_data <- bind_rows(particles_conc_continental_polymer_unfiltered, measurements_formatted)
+Figure <- ggplot(particle_plot_data, aes(x = SubCompartName, y = Concentration, col=source)) +  
+  geom_violin(data = particle_plot_data %>% filter(source == "SimpleBox"), 
+              aes(fill = source), alpha = 0.5) + 
+  geom_jitter(data = particle_plot_data %>% filter(source %in% c("Measurement_NL", "Measurement_Europe")), 
+              aes(col = source), 
+              position = position_jitter(width = 0.2), alpha = 1, size = 3) +
+  scale_fill_manual(values = Source_type_colors) +
+  scale_color_manual(values = Measurement_type_colors) +
+  labs(
+    title = paste0("Microplastic concentrations at regional scale, ", as.character(year)),
+    subtitle = paste0("Modeled concentrations not filtered for detection limit of measurements"),
+    x = "",
+    y = "Concentration"
+  ) +
+  plot_theme +  
+  scale_y_log10(
+    breaks = scales::trans_breaks("log10", function(x) 10^x, n = 10),
+    labels = scales::trans_format("log10", scales::math_format(10^.x))) +
+  annotation_logticks(
+    sides = "l",  
+    short = unit(0.07, "cm"),
+    mid = unit(0.07, "cm"),
+    long = unit(0.1, "cm"),
+    size = 0.25) +
+  theme(legend.position = "bottom") +
+  guides(fill = guide_legend(title = NULL), color = guide_legend(title = NULL))  # Remove legend titles
+
+Figure
+
+ggsave(paste0(figurefolder, "All_polymers_regional_particle_unfiltered.png"), plot = Figure, width = 20, height = 23, dpi = 1000)
+```
+
+Comparison mass data to SB data at regional scale
+
+```{R Make figure comparing SB outcomes to mass measurements for all polymers}
+measurements_mass <- read.xlsx("/rivm/r/E121554 LEON-T/03 - uitvoering WP3/MOMENTUM2/MOMENTUM2_measurements.xlsx", sheet = "Mass Data") |>
+  filter(source != "LEON-T measurement") |>
+  mutate(Scale = str_replace(Scale, "Regional", "NL"),
+         Scale = str_replace(Scale, "Continental", "Europe"))
+
+# Get measured concentrations
+measurements_formatted <- measurements_mass |> 
+  mutate(source = paste0("Measurement_", Scale)) |>
+  rename(Concentration = concentration,
+         Unit = concentration_unit) |>
+  mutate(SubCompartName = paste0(SubCompart, " (", Unit, ")")) |>
+  select(Concentration, SubCompartName, source) 
+
+mass_conc_regional_size_filtered <- mass_conc_regional_polymer |>
+  filter(Year == year) |>
+  left_join(rad_rho_filtered, by = c("RUN", "Polymer")) |>
+  filter(!is.na(rad_nm)) |>
+  filter(Year == year) |>
+  select(RUN, Source, Year, Scale, SubCompart, Polymer, Concentration, Unit, SubCompartName) |>
+  mutate(source = "SimpleBox") |>
+  group_by(RUN, SubCompart, source, Year, Unit, Scale) |>
+  summarise(Concentration = sum(Concentration)) |>
+  mutate(Concentration = Concentration/1*10^9) |>
+  mutate(Unit = case_when(
+    Unit == "kg/kg dw" ~ "µg/kg dw",
+    Unit == "kg/m3" ~ "µg/m^3"
+  )) |>
+  mutate(SubCompartName = paste0(SubCompart, " (", Unit, ")")) |>
+  ungroup()
+
+mass_plot_data <- bind_rows(mass_conc_regional_size_filtered, measurements_formatted)
+Figure <- ggplot(mass_plot_data, aes(x = SubCompartName, y = Concentration, col=source)) +  
+  geom_violin(data = mass_plot_data %>% filter(source == "SimpleBox"), 
+              aes(fill = source), alpha = 0.5) + 
+  geom_jitter(data = mass_plot_data %>% filter(source %in% c("Measurement_NL", "Measurement_Europe")), 
+              aes(col = source), 
+              position = position_jitter(width = 0.2), alpha = 1, size = 3) +
+  scale_fill_manual(values = Source_type_colors) +
+  scale_color_manual(values = Measurement_type_colors) +
+  labs(
+    title = paste0("Microplastic concentrations at regional scale, ", as.character(year)),
+    subtitle = paste0("Modeled concentrations filtered for detection limit of measurements"),
+    x = "",
+    y = "Concentration"
+  ) +
+  plot_theme +  
+  scale_y_log10(
+    breaks = scales::trans_breaks("log10", function(x) 10^x, n = 10),
+    labels = scales::trans_format("log10", scales::math_format(10^.x))) +
+  annotation_logticks(
+    sides = "l",  
+    short = unit(0.07, "cm"),
+    mid = unit(0.07, "cm"),
+    long = unit(0.1, "cm"),
+    size = 0.25) +
+  theme(legend.position = "bottom") +
+  guides(fill = guide_legend(title = NULL), color = guide_legend(title = NULL))  # Remove legend titles
+
+Figure
+
+ggsave(paste0(figurefolder, "All_polymers_regional_mass_size_filtered.png"), plot = Figure, width = 20, height = 23, dpi = 1000)
 ```
 
 Compare modeled TW concentrations with measured concentrations. 
 
 ```{R Figure comparing TW concentrations with measurements}
-
+source("vignettes/CaseStudies/LEON-T/f_plot_functions.R")
 LEONT_TWP_data <- prep_LEONT_data(abs_path_Measurements) 
 
 subcomparts <- unique(LEONT_TWP_data$SubCompart)
@@ -380,7 +436,7 @@ mass_conc_SB_data_TW2 <- mass_conc_SB_data_TW |>
 LEONT_SB_SBR_NR <- bind_rows(LEONT_TWP_data, mass_conc_SB_data_TW2) |>
   filter(Polymer == "SBR + NR") 
 
-Figure_21 <- ggplot(LEONT_SB_SBR_NR, aes(x = SubCompartName, y = Concentration, col=source)) +  
+Figure <- ggplot(LEONT_SB_SBR_NR, aes(x = SubCompartName, y = Concentration, col=source)) +  
   geom_violin(data = LEONT_SB_SBR_NR %>% filter(source == "SimpleBox"), 
               aes(fill = source), alpha = 0.5) + 
   geom_jitter(data = LEONT_SB_SBR_NR %>% filter(source == "LEON-T measurement"), 
@@ -406,7 +462,7 @@ Figure_21 <- ggplot(LEONT_SB_SBR_NR, aes(x = SubCompartName, y = Concentration, 
   theme(legend.position = "bottom") +
   guides(fill = guide_legend(title = NULL), color = guide_legend(title = NULL))  # Remove legend titles
 
-Figure_21
+Figure
 
-ggsave(paste0(figurefolder, "Tyre_wear.png"), plot = Figure_21, width = 20, height = 23, dpi = 1000)
+ggsave(paste0(figurefolder, "Tyre_wear_mass_regional_unfiltered.png"), plot = Figure, width = 20, height = 23, dpi = 1000)
 ```
