--- a/vignettes/CaseStudies/MOMENTUM2/Measurement_preparation.Rmd
+++ b/vignettes/CaseStudies/MOMENTUM2/Measurement_preparation.Rmd
@@ -10,12 +10,16 @@ library(tidyverse)
 library(readxl)
 ```
 
-# Leslie et al. (2017)
-The data used for validation of the SimpleBox4Plastics model is read in. The data is filtered for samples taken in the Netherlands, and data measured in # particles per km2 was removed from the dataset. This leaves the measurements by Leslie et al. (2017).
+# Leslie et al. (2017) <!--# What is the source paper of this dataset? This should be referenced as well -->
 
-Detection method: light microscopy was used to determine the count, size and shape. Detection limit 10 - 5000 um. 
+The data used for validation of the SimpleBox4Plastics model is read in.
+The data is filtered for samples taken in the Netherlands, and data measured in \# particles per km2 was removed from the dataset.
+This leaves the measurements by Leslie et al. (2017).
 
-Sampling method: Samples were collected in 1 or 2 liter glass jars. 
+Detection method: light microscopy was used to determine the count, size and shape.
+Detection limit 10 - 5000 um.
+
+Sampling method: Samples were collected in 1 or 2 liter glass jars.
 
 ```{R Leslie et al. data}
 SB4P_raw <- read.xlsx("/rivm/r/E121554 LEON-T/03 - uitvoering WP3/MOMENTUM2/Measurements/Concentrations_SB4N_validation.xlsx", sheet = "Plastics")
@@ -25,7 +29,7 @@ European_countries <- c("France", "Switzerland", "Italy", "England", "Germany", 
 # Select needed data and clean up the dataframe
 SB4P <- SB4P_raw |>
   filter(country %in% European_countries) |>
-    mutate(Scale = case_when(
+  mutate(Scale = case_when(
     str_detect(country, "Netherlands") ~ "Regional",
     TRUE ~ "Continental"
   )) |>
@@ -47,11 +51,17 @@ SB4P <- SB4P_raw |>
 ```
 
 # KWR data
-KWR measured microplastic concentrations in surface water at different locations in the Netherlands. 
 
-Sampling method: Two samples were taken per sampling event: one for LDIR and one for OM. Sampling depth 15 cm below the water surface. For both detection methods, about 500L of water was run through several filters with different sizes (see Table 1 in the article by Bäuerlein et al. (2023)).
+KWR measured microplastic concentrations in surface water at different locations in the Netherlands.
 
-Detection method: Two detection methods were used: laser direct infrared and optical microscopy (combined detection limit of 10 to 5000 um). 
+Sampling method: Two samples were taken per sampling event: one for LDIR and one for OM <!--# What is OM? -->.
+Sampling depth 15 cm below the water surface.
+For both detection methods, about 500L of water was run through several filters with different sizes (see Table 1 in the article by Bäuerlein et al. (2023)).
+
+Detection method: Two detection methods were used: laser direct infrared and optical microscopy (combined detection limit of 10 to 5000 um).
+
+<!--# Good de describe some basic statistics, e.g. number of observations, number of locations -->
+
 ```{R KWR data}
 #### KWR data
 KWR_data_concentrations <- read.xlsx("/rivm/r/E121554 LEON-T/03 - uitvoering WP3/MOMENTUM2/Measurements/KWR/Data KWR/readme.xlsx", sheet = "Meta")
@@ -88,7 +98,11 @@ KWR_location_concentrations_data <- KWR_data_dfs |>
   mutate(SubCompart = "river") |>
   mutate(unit = "#/m3") |>
   mutate(institute = "KWR") 
+```
 
+<!--# Make a bit clearer what is done in each chunk, Descibe seperately the filtration out of some of the data, e.g. related to effluent. Why is downstream filtered out? -->
+
+```{r}
 #### KWR effluent data
 KWR_effluent_concentrations <- read.xlsx("/rivm/r/E121554 LEON-T/03 - uitvoering WP3/MOMENTUM2/Measurements/KWR/Effluent/readme.xlsx", sheet = "Data")
 
@@ -138,7 +152,9 @@ KWR_data <- bind_rows(KWR_location_concentrations_data, KWR_location_concentrati
 ```
 
 # TNO LEON-T measurements tyre wear
-Read in and save data collected by TNO on NR and SBR particles. (Data in mass, not particles)
+
+Read in and save data collected by TNO on NR and SBR particles.
+(Data in mass, not particles)
 
 ```{R}
 source("vignettes/CaseStudies/LEON-T/f_plot_functions.R")
@@ -163,11 +179,11 @@ LEONT_TWP_data <- prep_LEONT_data(abs_path_Measurements) |>
 
 Read in the data on soil microplastic concentrations (Redondo-Hasselerharm et al., 2024)
 
-NOTE: only mean concentrations are currently kept. 
+NOTE: only mean concentrations are currently kept.
 
 ```{R}
-soil_concentrations <- read.xlsx("/rivm/r/E121554 LEON-T/03 - uitvoering WP3/MOMENTUM2/Redondo_2024_soil.xlsx", sheet = "Measurements")
-references <- read.xlsx("/rivm/r/E121554 LEON-T/03 - uitvoering WP3/MOMENTUM2/Redondo_2024_soil.xlsx", sheet = "References")
+soil_concentrations <- read.xlsx("/rivm/r/E121554 LEON-T/03 - uitvoering WP3/MOMENTUM2/Measurements/Redondo_2024_soil.xlsx", sheet = "Measurements")
+references <- read.xlsx("/rivm/r/E121554 LEON-T/03 - uitvoering WP3/MOMENTUM2/Measurements/Redondo_2024_soil.xlsx", sheet = "References")
 
 # Change "N.R." (not reported) to NA
 soil_concentrations[soil_concentrations == "N.R."] <- NA
@@ -210,11 +226,11 @@ soil_concentrations <- soil_concentrations |>
 
 Read in the data on freshwater sediment microplastic concentrations (Redondo-Hasselerharm et al., 2022)
 
-NOTE: only mean concentrations are currently kept. 
+NOTE: only mean concentrations are currently kept.
 
 ```{R}
-sediment_concentrations <- read.xlsx("/rivm/r/E121554 LEON-T/03 - uitvoering WP3/MOMENTUM2/Redondo_2022_sediment.xlsx", sheet = "Measurements")
-references <- read.xlsx("/rivm/r/E121554 LEON-T/03 - uitvoering WP3/MOMENTUM2/Redondo_2022_sediment.xlsx", sheet = "References")
+sediment_concentrations <- read.xlsx("/rivm/r/E121554 LEON-T/03 - uitvoering WP3/MOMENTUM2/Measurements/Redondo_2022_sediment.xlsx", sheet = "Measurements")
+references <- read.xlsx("/rivm/r/E121554 LEON-T/03 - uitvoering WP3/MOMENTUM2/Measurements/Redondo_2022_sediment.xlsx", sheet = "References")
 
 # Change "N.R." (not reported) to NA
 sediment_concentrations[sediment_concentrations == "N.R."] <- NA
@@ -256,13 +272,15 @@ sediment_concentrations <- sediment_concentrations |>
          upper_detection_limit_um = as.numeric(upper_detection_limit_um)) |>
   rename(unit = Unit) |>
   filter(country != "Russia")
+
 ```
 
 # MoreMomentum
+
 Data from Mintenig et al. (2020)
 
 ```{R}
-Mintenig <- read.xlsx("/rivm/r/E121554 LEON-T/03 - uitvoering WP3/MOMENTUM2/MoreMomentum_data_clean.xlsx", sheet = "Mintenig_2020") |>
+Mintenig <- read.xlsx("/rivm/r/E121554 LEON-T/03 - uitvoering WP3/MOMENTUM2/Measurements/MoreMomentum_data_clean.xlsx", sheet = "Mintenig_2020") |>
   rename(value = concentration) |>
   mutate(Scale = "Regional") |>
   select(-polymer)
@@ -273,24 +291,26 @@ Mintenig_particles <- Mintenig |>
 Mintenig_mass <- Mintenig |>
   filter(unit != "#/m3") |>
   mutate(unit = "µg/m^3")
+
 ```
 
 Data from Moses et al. (2023)
 
 ```{R}
-Moses <- read.xlsx("/rivm/r/E121554 LEON-T/03 - uitvoering WP3/MOMENTUM2/MoreMomentum_data_clean.xlsx", sheet = "Moses_2023") 
+Moses <- read.xlsx("/rivm/r/E121554 LEON-T/03 - uitvoering WP3/MOMENTUM2/Measurements/MoreMomentum_data_clean.xlsx", sheet = "Moses_2023") 
 Moses[is.na(Moses)] <- 0
 
 Moses <- Moses |>
   mutate(value = PP+PE+PS+PVC+Sil+PET+EVAc+PMMA+PC+ABS+PBT+PU+PA+`PLA-PBAT`)|>
   mutate(Scale = "Continental") |>
   select(value, unit, SubCompart, Scale, country, lower_detection_limit_um, upper_detection_limit_um, source)
-``` 
+
+```
 
 Data from Liu et al. (2022)
 
 ```{R}
-Liu <- read.xlsx("/rivm/r/E121554 LEON-T/03 - uitvoering WP3/MOMENTUM2/MoreMomentum_data_clean.xlsx", sheet = "Liu_2022") |>
+Liu <- read.xlsx("/rivm/r/E121554 LEON-T/03 - uitvoering WP3/MOMENTUM2/Measurements/MoreMomentum_data_clean.xlsx", sheet = "Liu_2022") |>
   rename(location = areatype) |>
   select(location, Total, unit, SubCompart, country, lower_detection_limit_um, upper_detection_limit_um, source) |>
   rename(value = Total) |>
@@ -300,7 +320,7 @@ Liu <- read.xlsx("/rivm/r/E121554 LEON-T/03 - uitvoering WP3/MOMENTUM2/MoreMomen
 Data from Mani et al. (2020)
 
 ```{R}
-Mani <- read.xlsx("/rivm/r/E121554 LEON-T/03 - uitvoering WP3/MOMENTUM2/MoreMomentum_data_clean.xlsx", sheet = "Mani_2020") |>
+Mani <- read.xlsx("/rivm/r/E121554 LEON-T/03 - uitvoering WP3/MOMENTUM2/Measurements/MoreMomentum_data_clean.xlsx", sheet = "Mani_2020") |>
   rename(value = concentration) |>
   mutate(Scale = "Continental")  |>
   select(value, unit, SubCompart, Scale, country, lower_detection_limit_um, upper_detection_limit_um, location, source)
@@ -309,7 +329,7 @@ Mani <- read.xlsx("/rivm/r/E121554 LEON-T/03 - uitvoering WP3/MOMENTUM2/MoreMome
 Data from Semmouri et al. (2023)
 
 ```{R}
-Semmouri <- read.xlsx("/rivm/r/E121554 LEON-T/03 - uitvoering WP3/MOMENTUM2/MoreMomentum_data_clean.xlsx", sheet = "Semmouri_2023") |>
+Semmouri <- read.xlsx("/rivm/r/E121554 LEON-T/03 - uitvoering WP3/MOMENTUM2/Measurements/MoreMomentum_data_clean.xlsx", sheet = "Semmouri_2023") |>
   group_by(Waterway, location, Date.of.sampling, unit, SubCompart, country, lower_detection_limit_um, upper_detection_limit_um, source) |>
   summarise(value = sum(concentration)) |>
   ungroup() |>
@@ -317,7 +337,9 @@ Semmouri <- read.xlsx("/rivm/r/E121554 LEON-T/03 - uitvoering WP3/MOMENTUM2/More
 ```
 
 # Save
-Save the data. #/m3 and weight concentrations on different tabs.
+
+Save the data.
+#/m3 and weight concentrations on different tabs.
 
 ```{R Save data}
 particle_data <- bind_rows(SB4P, KWR_data, soil_concentrations, Mintenig_particles, Moses, Liu, Mani, Semmouri, sediment_concentrations) |>
@@ -342,6 +364,31 @@ addWorksheet(wb, "Mass Data")
 writeData(wb, "Mass Data", mass_data)
 
 # Save the workbook
-saveWorkbook(wb, "/rivm/r/E121554 LEON-T/03 - uitvoering WP3/MOMENTUM2/MOMENTUM2_measurements.xlsx", overwrite = TRUE)
+saveWorkbook(wb, "vignettes/CaseData/MOMENTUM2_measurements.xlsx", overwrite = TRUE)
+# saveWorkbook(wb, "/rivm/r/E121554 LEON-T/03 - uitvoering WP3/MOMENTUM2/MOMENTUM2_measurements.xlsx", overwrite = TRUE)
 ```
 
+```{r}
+
+mass_data |> 
+  filter(Scale == "Regional") |>
+  summarise(length = n())
+particle_data |> 
+  filter(Scale == "Regional") |>
+  summarise(length = n())
+particle_data |> 
+  group_by(SubCompart,Scale) |> 
+  summarise(length = n())
+
+
+ggplot(mass_data, mapping = aes(concentration)) + 
+  geom_histogram()+
+  scale_x_log10()+
+  facet_wrap( ~ concentration_unit)
+
+
+ggplot(particle_data, mapping = aes(concentration)) + 
+  geom_histogram()+
+  scale_x_log10()+
+  facet_wrap( ~ concentration_unit)
+```
